--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,7 @@
 @import url(./components/Movies/SearchForm/SearchForm.css);
 @import url(./components/Movies/Movies.css);
 @import url(./components/Movies/MoviesCardList/MoviesCardList.css);
+@import url(./components/Movies/MoviesCard/MoviesCard.css);
 
 * {
   border: 1px solid red;
