--- a/src/components/Movies/MoviesCard/MoviesCard.css
+++ b/src/components/Movies/MoviesCard/MoviesCard.css
@@ -12,8 +12,32 @@
 }
 
 .MoviesCard__saved {
+    display: flex;
+    align-items: center;
     position: absolute;
     top: 14px;
     background-color: #FF4062;
     border-radius: 50%;
+    border: 0;
+    height: 21px;
+    left: 325px;
+}
+
+.MoviesCard__block {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 14px;
+}
+
+.MoviesCard__name {
+    margin: 0;
+    font-size: 13px;
+    font-weight: 500;
+}
+
+.MoviesCard__time {
+    margin: 0;
+    color: #A0A0A0;
+    font-size: 11px;
+    font-weight: 400;
 }
