--- a/src/components/Movies/Movies.css
+++ b/src/components/Movies/Movies.css
@@ -8,4 +8,7 @@
     margin-top: 89px; 
     margin-bottom: 151px;
     background-color: #fff;
+    padding-left: 559px;
+    padding-right: 559px;
+    border: 0;
 }
