--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,11 @@
 @import url(./components/Movies/Movies.css);
 @import url(./components/Movies/MoviesCardList/MoviesCardList.css);
 @import url(./components/Movies/MoviesCard/MoviesCard.css);
+@import url(./components/SavedMovies/SavedMovies.css);
+@import url(./components/Register/Register.css);
+@import url(./components/Login/Login.css);
+@import url(./components/Profile/Profile.css);
+
 
 * {
   border: 1px solid red;
