--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 @import url(./vendor/normalize.css);
 @import url(./vendor/fonts/fonts.css);
-@import url(./App.css);
+@import url(./components/App/App.css);
 @import url(./components/Header/Header.css);
 @import url(./components/Main/Main.css);
 @import url(./components/Main/Promo/Promo.css);
@@ -19,6 +19,8 @@
 @import url(./components/Register/Register.css);
 @import url(./components/Login/Login.css);
 @import url(./components/Profile/Profile.css);
+@import url(./components/NotFoundError/NotFoundError.css);
+
 
 
 * {
