--- a/src/components/Main/NavTab/NavTab.css
+++ b/src/components/Main/NavTab/NavTab.css
@@ -3,6 +3,7 @@
     display: flex;
     justify-content: center;
     column-gap: 40px;
+    height: 66px;
 }
 
 .NavTab__navigation {
@@ -11,4 +12,7 @@
     font-size: 13px;
     line-height: 16px;
     text-decoration: underline;
+    margin-top: 27px;
+    cursor: pointer;
 }
+
