--- a/src/components/Main/Techs/Techs.css
+++ b/src/components/Main/Techs/Techs.css
@@ -6,12 +6,13 @@
     font-weight: 400;
     font-size: 25px;
     border-bottom: 1px solid #000;
-    padding-bottom: 23px;
+    padding-bottom: 21px;
     margin-left: 70px;
     margin-right: 70px;
     padding-top: 100px;
     margin-top: 0;
     margin-bottom: 90px;
+    letter-spacing: -0.1em;
 }
 
 .Techs__block {
@@ -25,16 +26,18 @@
     margin-bottom: 26px;
     font-size: 50px;
     font-weight: 400;
+    letter-spacing: -0.04em;
 }
 
 .Techs__text {
-    max-width: 460px;
+    width: 35.6589vw;;
     font-size: 14px;
     line-height: 20px;
     font-weight: 400;
     margin-top: 0;
     text-align: center;
     margin-bottom: 100px;
+    letter-spacing: -0.04em;
 }
 
 .Techs__table{
