--- a/src/components/Main/Portfolio/Portfolio.css
+++ b/src/components/Main/Portfolio/Portfolio.css
@@ -14,6 +14,7 @@
     justify-content: space-between;
     border-bottom: 1px solid #E8E8E8;
     margin-bottom: 20px;
+    text-decoration: none;
 }
 
 .Portfolio__block:last-child{
@@ -26,6 +27,8 @@
     margin-bottom: 19px;
     font-size: 30px;
     font-weight: 400;
+    color: #000;
+
 }
 
 .Portfolio__arrow{
@@ -33,4 +36,5 @@
     margin-bottom: 19px;
     font-size: 30px;
     font-weight: 400;
+    color: #000;
 }
