--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -72,7 +72,7 @@
   opacity: 70%;
 }
 
-.Header__enter {
+.Header__enter-button {
   font-size: 12px;
   font-weight: 500;
   color: #fff;
@@ -83,6 +83,6 @@
   padding: 8px 20px 8px;
 }
 
-.Header__enter {
+.Header__enter-button:hover {
   opacity: 70%;
 }
