--- a/src/components/Movies/MoviesCardList/MoviesCardList.css
+++ b/src/components/Movies/MoviesCardList/MoviesCardList.css
@@ -1,9 +1,26 @@
 .MoviesCardList{
+    display: flex;
+    flex-direction: column;
+}
+
+.MoviesCardList__list{
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(4, 1fr);
+    grid-template-columns: repeat(3, 27.9070vw);
     gap: 60px 30px;
     margin-left: 70px;
     margin-right: 70px;
     margin-top: 80px;
+}
+
+.MoviesCardList__button{
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 89px; 
+    margin-bottom: 151px;
+    background-color: #F9F9F9;
+    border: 0;
+    border-radius: 6px;
+    width: 24.8062vw;
+    height: 36px;
+    cursor: pointer;
 }
