--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,7 +1,6 @@
 .Header {
   display: flex;
   justify-content: space-between;
-  
 }
 
 .Header__logo {
@@ -17,12 +16,13 @@
   margin-top: 21px;
   margin-bottom: 23px;
   display: flex;
-  background-color: #F3C1F8;
+  background-color: #f3c1f8;
   align-items: center;
-  margin-left: 50px;
+  margin-left: 49px;
   font-weight: 500;
   font-size: 16px;
   border: 0;
+  letter-spacing: -0.05em;
 }
 
 .Header__button-account:hover {
@@ -30,34 +30,47 @@
 }
 
 .Header__button-img {
-  margin-left: 13px;
+  margin-left: 21px;
 }
 
-.Navigation {
+.Navigation__desktop {
   display: flex;
   align-items: center;
-  margin-right: 79px;
+  margin-right: 80px;
+  margin-top: 5px;
 }
 
 .Header__film-saved {
   margin-left: 20px;
-  font-size: 18px;
+  font-size: 14px;
   font-weight: 400;
   cursor: pointer;
+  text-decoration: none;
+  color: #000;
 }
 
 .Header__film-saved:hover {
-  opacity: 70%;
+  opacity: 0.7;
+}
+
+.Header__film-saved:active {
+  font-weight: 500;
 }
 
 .Header__film {
-  font-size: 18px;
+  font-size: 14px;
   font-weight: 400;
   cursor: pointer;
+  text-decoration: none;
+  color: #000;
 }
 
 .Header__film:hover {
-  opacity: 70%;
+  opacity: 0.7;
+}
+
+.Header__film:active {
+  font-weight: 500;
 }
 
 .Header__register {
@@ -72,7 +85,12 @@
   opacity: 70%;
 }
 
-.Header__enter-button {
+.Header__button {
+  color: #000;
+  text-decoration: none;
+}
+
+.Header__enter {
   font-size: 12px;
   font-weight: 500;
   color: #fff;
@@ -81,8 +99,218 @@
   border-radius: 3px;
   margin-left: 28px;
   padding: 8px 20px 8px;
+  border: 0;
+}
+
+.Header__enter:hover {
+  opacity: 70%;
+}
+
+.Header__enter-button {
+  font-size: 12px;
+  font-weight: 500;
+  color: #fff;
+  background-color: #000;
+  border: 0;
 }
 
 .Header__enter-button:hover {
   opacity: 70%;
+}
+
+.Hamburger {
+  display: none;
+}
+
+@media screen and (max-width: 768px) {
+  .Navigation__desktop {
+    display: none;
+  }
+
+  .Hamburger__opening {
+    width: 40px;
+    height: 24px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    cursor: pointer;
+    margin-top: 21px;
+    border: 0;
+  }
+
+  .Line {
+    width: 100%;
+    height: 3px;
+    background-color: #000;
+  }
+
+  .Line::before,
+  .Line::after {
+    content: "";
+    width: 100%;
+    height: 4px;
+    background-color: #000;
+  }
+
+  .Line::before {
+    transform: translateY(-10px);
+  }
+
+  .Line::after {
+    transform: translateY(10px);
+  }
+
+  .Hamburger {
+    display: flex;
+  }
+
+  .Navigation__hamburger {
+    display: flex;
+    position: fixed;
+    z-index: 2;
+    top: 0;
+    right: 0;
+    background-color: rgba(0, 0, 0, 0.3);
+    width: 100vw;
+    height: 100vh;
+  }
+
+  .Navigation__hamburger-menu {
+    position: absolute;
+    width: 67.7083vw;
+    height: 100vh;
+    padding: 0;
+    margin: 0;
+    top: 0;
+    right: 0;
+    background-color: #fff;
+  }
+
+  .Navigation__hamburger-ul{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    list-style-type: none;
+    margin: 0;
+    margin-top: 154px;
+    padding: 0;
+  }
+
+  .Navigation__hamburger-li {
+    margin-bottom: 28px;
+  }
+
+  .Navigation__hamburger-li:last-child {
+    margin-top: 596px;
+    margin-bottom: 0;
+  }
+
+  .Navigation__hamburger-button {
+    margin-bottom: 0;
+    background-color: #fff;
+    padding: 0;
+    font-size: 14px;
+    border: 0;
+    margin-right: 6px;
+  }
+
+  .Navigation__hamburger-exit {
+    background-color: #fff;
+    border: 0;
+    position: fixed;
+    right: 15.44px;
+    top: 15.44px;
+    cursor: pointer;
+    z-index: 1;
+  }
+
+  .Navigation__hamburger-link {
+    font-size: 18px;
+    font-weight: 400;
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+    border: 0;
+    line-height: 21.78px;
+  }
+  .Navigation__hamburger-link_account {
+    font-size: 14px;
+  }
+
+  .Navigation__hamburger-account{
+    margin-left: 21px;
+  }
+
+  .Navigation__hamburger-link:hover {
+    opacity: 0.7;
+  }
+
+  .Navigation__hamburger-link:active {
+    text-decoration: underline #000;
+  }
+
+  .Header__logo {
+    margin-left: 3.9063vw;
+    margin-top: 13px;
+  }
+  .Navigation {
+    margin-right: 3.9063vw;
+  }
+
+  .Header__enter {
+    padding: 8px 15px 8px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .Header__logo {
+    margin-top: 19px;
+  }
+
+  .Hamburger__opening {
+    width: 36px;
+    margin-top: 28px;
+  }
+
+  .Navigation {
+    margin-right: 15px;
+  }
+
+  .Header__enter-button {
+    font-size: 10px;
+  }
+
+  .Header__enter {
+    padding: 5px 6px 5px;
+    margin-left: 14px;
+  }
+
+  .Header__register {
+    font-size: 10px;
+  }
+  .Navigation__hamburger {
+    width: 100vw;
+  }
+
+  .Navigation__hamburger-menu {
+    width: 100vw;
+  }
+
+  .Navigation__hamburger-li {
+    margin-bottom: 24px;
+  }
+  .Navigation__hamburger-ul{
+    margin-top: 144px;
+  }
+  .Navigation__hamburger-li:last-child {
+    margin-top: 425px;
+  }
+  .Navigation__hamburger-exit {
+    right: 7.44px;
+    top: 11.44px;
+  }
+
+  .Navigation__hamburger-link_account {
+    margin-left: 21px;
+  }
 }
