--- a/src/components/Main/NavTab/NavTab.css
+++ b/src/components/Main/NavTab/NavTab.css
@@ -16,3 +16,18 @@
     cursor: pointer;
 }
 
+.NavTab__navigation:hover{
+    opacity: 0.7;
+}
+
+@media screen and (max-width: 320px) {
+    .NavTab{
+        column-gap: 24px;
+    }
+    
+    .NavTab__navigation{
+        font-size: 11px;
+        margin-top: 25px;
+    }
+  }
+
