--- a/src/components/Main/Techs/Techs.css
+++ b/src/components/Main/Techs/Techs.css
@@ -1,60 +1,140 @@
 .Techs {
-    background-color: #F5F5F5;
+  background-color: #f5f5f5;
 }
 
 .Techs__about {
-    font-weight: 400;
-    font-size: 25px;
-    border-bottom: 1px solid #000;
-    padding-bottom: 21px;
-    margin-left: 70px;
-    margin-right: 70px;
-    padding-top: 100px;
-    margin-top: 0;
-    margin-bottom: 90px;
-    letter-spacing: -0.1em;
+  font-weight: 400;
+  font-size: 25px;
+  border-bottom: 1px solid #000;
+  padding-bottom: 21px;
+  margin-left: 70px;
+  margin-right: 70px;
+  padding-top: 100px;
+  margin-top: 0;
+  margin-bottom: 90px;
+  letter-spacing: -0.1em;
 }
 
 .Techs__block {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .Techs__heading {
-    margin-top: 0;
-    margin-bottom: 26px;
-    font-size: 50px;
-    font-weight: 400;
-    letter-spacing: -0.04em;
+  margin-top: 0;
+  margin-bottom: 26px;
+  font-size: 50px;
+  font-weight: 400;
+  letter-spacing: -0.04em;
 }
 
 .Techs__text {
-    width: 35.6589vw;;
-    font-size: 14px;
-    line-height: 20px;
-    font-weight: 400;
-    margin-top: 0;
-    text-align: center;
-    margin-bottom: 100px;
+  width: 35.6589vw;
+  font-size: 14px;
+  line-height: 20px;
+  font-weight: 400;
+  margin-top: 0;
+  text-align: center;
+  margin-bottom: 100px;
+  letter-spacing: -0.04em;
+}
+
+.Techs__table {
+  display: flex;
+  column-gap: 10px;
+  margin-bottom: 100px;
+}
+
+.Techs__cell {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 10px;
+  background-color: #e8e8e8;
+  font-size: 14px;
+  font-weight: 400;
+  width: 90px;
+  height: 60px;
+  margin-top: 0;
+  margin-bottom: 0;
+  margin-left: 2px;
+}
+
+@media screen and (max-width: 768px) {
+  .Techs__about {
+    padding-top: 91px;
+    margin-left: 6.5104vw;
+    margin-right: 6.5104vw;
+    margin-bottom: 80px;
+  }
+
+  .Techs__heading {
+    margin-bottom: 20px;
+  }
+
+  .Techs__table {
+    margin-bottom: 90px;
+  }
+
+  .Techs__text {
+    width: 59.8958vw;
+    font-size: 12px;
+    margin-bottom: 81px;
+  }
+
+  .Techs__cell {
+    width: 10.9375vw;
+    margin-left: 0px;
+    font-size: 12px;
+    height: 57px;
+  }
+}
+
+@media screen and (max-width: 571px) {
+  .Techs__table {
+    display: grid;
+    grid-template-columns: repeat(4, 10.9375vw);
+    row-gap: 10px;
+  }
+  .Techs__cell {
+    font-size: 2.1053vw;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .Techs {
+    background-color: #fff;
+  }
+
+  .Techs__about {
+    font-size: 18px;
+    margin-left: 5.625vw;
+    margin-right: 5.625vw;
+    padding-top: 43px;
     letter-spacing: -0.04em;
-}
+    padding-bottom: 27px;
+    margin-bottom: 61px;
+  }
 
-.Techs__table{
-    display: flex;
-    column-gap: 10px;
-    margin-bottom: 100px;
-}
+  .Techs__heading {
+    font-size: 30px;
+    margin-bottom: 25px;
+  }
+  .Techs__text {
+    font-size: 11px;
+    width: 91.2500vw;
+    line-height: 16px;
+    margin-bottom: 51px;
+  }
 
-.Techs__cell{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 10px;
-    background-color: #E8E8E8;
-    font-size: 14px;
-    font-weight: 400;
-    width: 90px;
-    height: 60px;
-    margin: 0;
+  .Techs__table{
+    grid-template-columns: repeat(2, 26.25vw);
+    margin-bottom: 52px;
+  }
+
+  .Techs__cell{
+    width: 26.25vw;
+    font-size: 12px;
+  }
 }
