--- a/src/components/Movies/SearchForm/SearchForm.css
+++ b/src/components/Movies/SearchForm/SearchForm.css
@@ -1,107 +1,199 @@
 .SearchForm {
-    border-bottom: 1px solid #E8E8E8;
-    padding-bottom: 69px;
-    margin-left: 5.4264vw;
-    margin-right: 5.4264vw;
+  border-bottom: 1px solid #e8e8e8;
+  padding-bottom: 68px;
+  margin-left: 5.4264vw;
+  margin-right: 6.0465vw;
 }
 .SearchForm__form {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding-top: 19px;
-    padding-bottom: 19px;
-    border-radius: 9px;
-    box-shadow: 0 3px 14px 0 rgba(0, 0, 0, 0.08);
+  display: flex;
+  align-items: center;
+  padding-top: 21px;
+  padding-bottom: 19px;
+  border-radius: 9px;
+  box-shadow: 0 3px 14px 0 rgba(0, 0, 0, 0.08);
+  width: 88.3721vw;
+}
+
+.SearchForm__search {
+  display: flex;
+  width: 65.3906vw;
 }
 
 .SearchForm__input {
-    border: 0;
-    padding: 0;
-    font-size: 18px;
-    font-weight: 400;
-    border: 0;
-    width: 58.2171vw;
+  border: 0;
+  padding: 0;
+  font-size: 18px;
+  font-weight: 400;
+  border: 0;
 }
 
 .SearchForm__input:-ms-input-placeholder {
-    color: #A0A0A0;
-    font-size: 18px;
-    font-weight: 400;
+  color: #a0a0a0;
+  font-size: 18px;
+  font-weight: 400;
+  height: 14px;
+  background: #ebebeb;
+  border-radius: 100px;
+  position: relative;
+  margin-left: 2.3256vw;
 }
 
 .SearchForm__button {
-    background-color: #000;
-    color: #fff;
-    font-size: 11px;
-    width: 58.65px;
-    border-radius: 20px 20px 20px 20px;
-    height: 34px;
-    padding: 8px 10.35px 8px;
-    margin-left: 21.35px;
+  background-color: #000;
+  color: #fff;
+  font-size: 11px;
+  width: 58.65px;
+  border-radius: 20px 20px 20px 20px;
+  height: 34px;
+  padding: 7px 10.35px 8px;
+  cursor: pointer;
+}
+
+.SearchForm__button:hover {
+  opacity: 0.7;
 }
 
 .SearchForm__switch {
-    cursor: pointer;
-    text-indent: -9999px;
-    width: 36px;
-    height: 14px;
-    background: #EBEBEB;
-    display: block;
-    border-radius: 100px;
-    position: relative;
-    margin-left: 2.3256vw;
+  position: relative;
+  display: inline-block;
+  width: 34px;
+  height: 14px;
 }
 
-.SearchForm__switch:after {
-    content: '';
-    position: absolute;
-    top: 2px;
-    left: 2px;
-    width: 10px;
-    height: 10px;
-    background: #f5f5f5;
-    border-radius: 100%;
-    transition: 0.3s;
+.SearchForm__checkbox {
+  display: none;
 }
 
-.SearchForm__checkbox:checked+.SearchForm__switch {
-    background: #2BE080;
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ebebeb;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
 }
 
-.SearchForm__checkbox:checked+.SearchForm__switch:after {
-    left: calc(100% - 5px);
-    transform: translateX(-100%);
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 10px;
+  width: 10px;
+  left: 2px;
+  bottom: 3px;
+  background-color: #f5f5f5;
+  transition: 0.4s;
+  border-radius: 100%;
 }
 
-.SearchForm__switch:active:after {
-    width: 36px;
-    background: #fff;
+input:checked + .slider {
+  background-color: #2be080;
+}
+
+input:checked + .slider:before {
+  transform: translateX(20px);
+}
+
+.round {
+  border-radius: 20px;
 }
 
 .SearchForm__block-input {
-    display: flex;
-    align-items: center;
-    border-right: 1px solid #CBCBCB;
-    padding-right: 19px;
+  display: flex;
+  align-items: center;
+  border-right: 1px solid #cbcbcb;
+  padding-right: 19px;
 }
 
 .SearchForm__block-filter {
-    display: flex;
-    align-items: center;
-    margin-right: 40px;
+  display: flex;
+  align-items: center;
+  margin-left: 2.3256vw;
 }
 
 .SearchForm__filter {
-    font-size: 13px;
-    font-weight: 400;
-    margin-top: 0;
-    margin-bottom: 0;
-    margin-left: 14px;
-    margin-right: 30px;
+  font-size: 13px;
+  font-weight: 400;
+  margin-top: 0;
+  margin-bottom: 0;
+  margin-left: 14px;
 }
 
 .SearchForm__icon {
-    width: 34px;
-    margin-left: 19px;
-    margin-right: 10px;
+  width: 34px;
+  margin-left: 19px;
+  margin-right: 10px;
+}
+
+@media screen and (max-width: 1200px) {
+  .SearchForm__search {
+    width: 55.0781vw;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .SearchForm {
+    margin-left: 3.9063vw;
+    margin-right: 3.9063vw;
+    padding-bottom: 108px;
+  }
+
+  .SearchForm__form {
+    width: 92.3177vw;
+  }
+  .SearchForm__input {
+    width: 35.026vw;
+  }
+
+  .SearchForm__block-filter {
+    margin-left: 2.8646vw;
+  }
+}
+
+@media screen and (max-width: 715px) {
+  .SearchForm {
+    padding-bottom: 27px;
+  }
+  .SearchForm__icon {
+    display: none;
+  }
+
+  .SearchForm__input:-ms-input-placeholder {
+    font-size: 14px;
+    margin-left: 15px;
+  }
+
+  .SearchForm__input {
+    font-size: 14px;
+    margin-left: 15px;
+  }
+  .SearchForm__form {
+    padding-top: 19px;
+    display: flex;
+    flex-direction: column;
+    border-radius: 0px;
+    box-shadow: none;
+  }
+
+  .SearchForm__button {
+    margin-left: 41px;
+  }
+
+  .SearchForm__block-input {
+    border: 0;
+    border-radius: 9px;
+    box-shadow: 0 3px 14px 0 rgba(0, 0, 0, 0.08);
+    padding-top: 17px;
+    padding-bottom: 17px;
+  }
+
+  .SearchForm__block-filter {
+    margin-top: 50px;
+    margin-left: 0;
+  }
+  .SearchForm__filter {
+    font-size: 11px;
+  }
 }
