--- a/src/components/NotFoundError/NotFoundError.css
+++ b/src/components/NotFoundError/NotFoundError.css
@@ -1,26 +1,52 @@
 .NotFoundError {
-    display: flex;
-    margin-top: 246px;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  margin-top: 246px;
+  flex-direction: column;
+  align-items: center;
 }
 
 .NotFoundError__heading {
-    font-size: 140px;
-    font-weight: 400;
-    margin: 0;
+  font-size: 140px;
+  font-weight: 400;
+  margin: 0;
 }
 
 .NotFoundError__text {
-    font-size: 16px;
-    font-weight: 400;
-    margin-bottom: 184px;
+  font-size: 16px;
+  font-weight: 400;
+  margin-bottom: 184px;
 }
 
-.NotFoundError__link{
-    color: #000;
-    text-decoration: none;
-    font-size: 14px;
-    font-weight: 400;
-    cursor: pointer;
+.NotFoundError__link {
+  color: #000;
+  text-decoration: none;
+  font-size: 14px;
+  font-weight: 400;
+  cursor: pointer;
+}
+
+.NotFoundError__link:hover {
+  opacity: 0.7;
+}
+
+@media screen and (max-width: 768px) {
+  .NotFoundError {
+    margin-top: 408px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .NotFoundError {
+    margin-top: 333px;
+  }
+  .NotFoundError__heading {
+    font-size: 80px;
+  }
+  .NotFoundError__text {
+    font-size: 12px;
+    margin-bottom: 284px;
+  }
+  .NotFoundError__link {
+    font-size: 12px;
+  }
 }
