--- a/src/index.css
+++ b/src/index.css
@@ -20,4 +20,6 @@
 @import url(./components/Login/Login.css);
 @import url(./components/Profile/Profile.css);
 @import url(./components/NotFoundError/NotFoundError.css);
-
+body{
+    margin: 0;
+}
