movies-explorer-front second

--- a/src/components/Main/AboutProject/AboutProject.css
+++ b/src/components/Main/AboutProject/AboutProject.css
@@ -86,7 +86,7 @@
     grid-template-columns: repeat(2, 41.5365vw);
     margin-right: 6.5104vw;
     margin-left: 6.5104vw;
-    gap: 22px 30px;
+    gap: 2.8646vw 3.9063vw;
     margin-bottom: 95px;
   }
   .AboutProject__block-weeks {
