--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -25,6 +25,7 @@
   display: flex;
   align-items: center;
   margin-top: 22px;
+  justify-content: space-between;
 }
 
 .Footer__year {
@@ -36,7 +37,6 @@
 .Footer__links {
   display: flex;
   gap: 20px;
-  margin-left: 70.3876vw;
 }
 
 .Footer__link {
@@ -59,9 +59,6 @@
   .Footer__block {
     margin-top: 20px;
   }
-  .Footer__links{
-    margin-left: 62.2396vw;
-  }
 }
 
 @media screen and (max-width: 620px) {
@@ -78,7 +75,6 @@
     display: flex;
     flex-direction: column;
     gap: 0;
-    margin-left: 0;
   }
 
   .Footer__block {
