--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,3 +1,21 @@
 .App {
-    font-family: "Inter", Arial, Helvetica, sans-serif;
+  font-family: "Inter", Arial, Helvetica, sans-serif;
+}
+
+@media screen and (max-width: 768px) {
+  .App {
+    max-width: 1280px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .App {
+    max-width: 768px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .App {
+    max-width: 320px;
+  }
 }
