--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,21 +1,6 @@
 .App {
   font-family: "Inter", Arial, Helvetica, sans-serif;
+  max-width: 1280px;
+  margin: 0 auto 0;
 }
 
-@media screen and (max-width: 768px) {
-  .App {
-    max-width: 1280px;
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .App {
-    max-width: 768px;
-  }
-}
-
-@media screen and (max-width: 320px) {
-  .App {
-    max-width: 320px;
-  }
-}
