--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,7 @@
 @import url(./components/Login/Login.css);
 @import url(./components/Profile/Profile.css);
 @import url(./components/NotFoundError/NotFoundError.css);
+@import url(./components/InfoTooltip/InfoTooltip.css);
 body{
     margin: 0;
 }
