--- a/src/components/NotFoundError/NotFoundError.css
+++ b/src/components/NotFoundError/NotFoundError.css
@@ -23,6 +23,8 @@
   font-size: 14px;
   font-weight: 400;
   cursor: pointer;
+  border: 0;
+  background-color: #fff;
 }
 
 .NotFoundError__link:hover {
